force-app/main/default/objects/CustomerDataEvent__e/CustomerDataEvent__e.object-meta.xml
<CustomObject>
    <label>Customer Data Event</label>
    <pluralLabel>Customer Data Events</pluralLabel>
</CustomObject>