force-app/main/default/objects/CustomerDataEvent__e/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <label>Customer ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>