force-app/main/default/objects/CustomerDataEvent__e/fields/EventSource__c.field-meta.xml
<CustomField>
    <fullName>EventSource__c</fullName>
    <label>Event Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>