force-app/main/default/objects/CustomerDataEvent__e/fields/EventTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EventTimestamp__c</fullName>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>